force-app/main/default/objects/LOB_Summary__c/LOB_Summary__c.object-meta.xml
<CustomObject>
    <description>LOB summary object is used to track overall submission comments as well as LOB-specific narratives

J. Ryan 7/30/2021</description>
    <label>LOB Summary</label>
    <nameField>
        <label>LOB Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOB Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>