force-app/main/default/objects/LOB_Summary__c/fields/LOB_Name__c.field-meta.xml
<CustomField>
    <fullName>LOB_Name__c</fullName>
    <label>LOB Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_of_Business</valueSetName>
    </valueSet>
</CustomField>