force-app/main/default/objects/LOB_Summary__c/fields/Service_Requests__c.field-meta.xml
<CustomField>
    <fullName>Service_Requests__c</fullName>
    <label>Service Requests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Underwriting COE Review</fullName>
            </value>
            <value>
                <fullName>Actuarial Review</fullName>
            </value>
            <value>
                <fullName>Senior Underwriter Review</fullName>
            </value>
            <value>
                <fullName>Account Financial Review</fullName>
            </value>
            <value>
                <fullName>Collateral/ LOC Confirmation</fullName>
            </value>
            <value>
                <fullName>Risk Engineering Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>